--- a/css/fuentes (2).css
+++ b/css/fuentes (2).css
@@ -1,18 +1,31 @@
-h2{
-color: blue;
-font-family:'Cinzel';
+* {
+    margin: 0;
+    padding: 0; 
 }
-/* cinzel-regular - latin */
+div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(24,24,24, .9);
+    color: rgb(249,15,15);
+    height: 100vh;
+    width: 100%;
+}
+label {
+    font-family:'Bebas Neue';
+    font-size: 12em;
+}
+/* bebas-neue-regular - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Cinzel';
+    font-family: 'Bebas Neue';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/cinzel-v19-latin-regular.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/cinzel-v19-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/cinzel-v19-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/cinzel-v19-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/cinzel-v19-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/cinzel-v19-latin-regular.svg#Cinzel') format('svg'); /* Legacy iOS */
+    src: url('../fonts/bebas-neue-v9-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/bebas-neue-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/bebas-neue-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/bebas-neue-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/bebas-neue-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/bebas-neue-v9-latin-regular.svg#BebasNeue') format('svg'); /* Legacy iOS */
   }
 
