--- a/css/fuentes1.css
+++ b/css/fuentes1.css
@@ -1,6 +1,21 @@
-h2{
-    color: aquamarine;
-    font-family: 'Cinzel', sans-serif;
+
+* {
+    margin: 0;
+    padding: 0; 
+}
+div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255,255,255);
+    color: rgb(64,64,64);
+    height: 100vh;
+    width: 100%;
+}
+label{
+    font-family:'Cinzel';
+    font-size: 7em;
+    text-align: center;
 }
 /* cinzel-regular - latin */
 @font-face {
@@ -15,3 +30,15 @@ h2{
          url('../fonts/cinzel-v19-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/cinzel-v19-latin-regular.svg#Cinzel') format('svg'); /* Legacy iOS */
   }
+  /* cincel-700 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Cinzel';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/cinzel-v19-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/cinzel-v19-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/cinzel-v19-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/cinzel-v19-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/cinzel-v19-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/cinzel-v19-latin-regular.svg#Cinzel') format('svg'); /* Legacy iOS */
