--- a/css/fuentes3.css
+++ b/css/fuentes3.css
@@ -1,6 +1,20 @@
-h2{
-    color: brown;
-    font-family:'waltograph';
+* {
+  margin: 0;
+  padding: 0; 
+}
+div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(2,12,66);
+  color: white;
+  height: 100vh;
+  width: 100%;
+}
+label {
+  font-family:'waltograph', sans-serif;
+  font-size: 12em;
+  text-align: center;
     }
   /* waltograph */
 @font-face {
@@ -8,6 +22,6 @@ h2{
     font-family: 'waltograph';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/waltograph42.otf'); /* IE9 Compat Modes */
-    src: url('../fonts/waltographUI.ttf')  /* IE6-IE8 */
+    src: url('../fonts/waltograph42.otf'), /* IE9 Compat Modes */
+     url('../fonts/waltographUI.ttf');  /* IE6-IE8 */
 }
