--- a/css/colores.css
+++ b/css/colores.css
@@ -37,9 +37,15 @@ h1 {
 .box-171-238-7 {
   background-color: rgb(171-238-7);
 }
+.box-255-195-0 {
+  background-color: rgb(255-195-0);
+}
 .box-14FAC3 {
   background-color: #14FAC3;
 }
 .box-F5370F {
   background-color: #F5370F;
+}
+.box-FFD700{
+  background-color: #FFD700;
 }
