--- a/css/catalogo.css
+++ b/css/catalogo.css
@@ -4,29 +4,34 @@
     background-color: rgb(242,242,242); 
  }
  .main-box{
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     flex-direction: row;
      /* vh: view height */
      height: 100vh;
  }
  .box-style{
      width: 350px;
      height: 460px;
-     margin: 0 40px;
      background-color: rgb(255,255,255);
-     display: flex;
-     align-items: flex-end;
+     margin: 0 auto;
+     margin-top: 100px;
+ }
+ .product-box {
+   width: 250px;
+   height: 300px;
+   margin: 0 auto;
+   background-color: white;
+ }
+ img {
+   margin-top: 80px;
  }
  /* caja de color */
  .add-cart-1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   margin-top: 20px;
+    text-align: center;
+    padding-top: 25px;
     width: 100%;
-    height: 60px;
+    height: 40px;
     background-color: rgb(39,200,164);
+   
  }
  .add-cart-1-span {
     background-color: transparent;
@@ -35,7 +40,33 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: .9em;
  }
- .add-cart-2{
+ .product-text {
+   text-align: center;
+   background-color: white;
+ }
+ .product-text-span {
+   background-color: white;
+   font-size: 1.3em;
+   font-weight: 900;
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+   color: rgb(64,64,64,.9)
+ }
+ .text-descripcion {
+   background-color: white;
+   color: (64,64,64,.9);
+   font-size: .8em;
+ }
+ .price-text {
+   background-color: white;
+   color: rgb(39,200,164);
+   font-size: 1.8em;
+   font-weight: 900;
+   display: block;
+   margin-top: 20px;
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+ }
+ /* .add-cart-2{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,7 +94,7 @@
     color: white;
     font-weight: 900;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: .9em;
+    font-size: .9em; */
  }
  p{
      font-size: 1.4;
