--- a/css/menu-horizontal.css
+++ b/css/menu-horizontal.css
@@ -48,6 +48,8 @@ nav {
     cursor: pointer;
     color: rgb(48,48,48);
     font-size: 1.2em;
+    margin-bottom: ;
+    
 }
 .texto-nuevo {
     background-color: rgb(250,142,4);
