--- a/css/media-query.css
+++ b/css/media-query.css
@@ -4,14 +4,23 @@
 }
 .main-nav {
     background-color:rgb(245, 144, 4) ;
-    height: 85px;
+    height: 80px;
     width: 100%;
-}
-.main-menu {
-    color: white;
     font-size: 1.3em;
     font-family: 'Poppins', sans-serif; 
     font-weight: 700;
+
+}
+.main-nav-2 {
+    background-color:rgb(233, 12, 12) ;
+    height: 80px;
+    width: 100%;
+    font-size: 1.3em;
+    font-family: 'Poppins', sans-serif; 
+    font-weight: 700;
+
+}
+.main-menu {
     text-align: right;
     list-style: none;
 }
@@ -25,7 +34,7 @@
 }
 a {
    text-decoration: none;
-   color: white;
+   color:white
 }
 .menu-bar {
     display: none;
@@ -33,8 +42,12 @@ a {
 /* media query*/
 @media only screen and (max-width: 1500px) {
       .main-menu {
+       display: none;
+      }
+      .main-menu-block {
         height: 100vh;
-        background-color: rgb(64, 64, 64);
+        background-color: rgb(64,64,64);
+        list-style: none;
         text-align: center;
       }
       .item-style {
@@ -43,8 +56,9 @@ a {
       }
       .menu-bar {
         display: inline-block;
-        color: white;
-        padding-top: 15px;
+        color: rgb(144, 247, 35 );
+        text-align: left;
+        padding-top: 10px;
         margin-left: 25px;
         font-size: 2em;
      }
