--- a/css/media-query.css
+++ b/css/media-query.css
@@ -42,13 +42,25 @@ a {
 /* media query*/
 @media only screen and (max-width: 1500px) {
       .main-menu {
-       display: none;
+       height: 100vh;
+       background-color: rgb(64,64,64);
+       list-style: none;
+       text-align: center;
+       position: fixed;
+       width: 100%;
+       left: -100%;
+      transition: left 400ms;
+
       }
       .main-menu-block {
         height: 100vh;
         background-color: rgb(64,64,64);
         list-style: none;
         text-align: center;
+        position: fixed;
+        width: 100%;
+        left: 0;
+        transition: left 400ms;
       }
       .item-style {
         display: block;
