--- a/css/menu-subitems-2.css
+++ b/css/menu-subitems-2.css
@@ -2,3 +2,91 @@
     margin: 0;
     padding: 0;
 }
+
+nav{
+  background-color: rgb(211, 21, 21 );
+ /*  height: 70PX; */
+  width: 100%;
+  color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif
+ }
+ ul {
+   width: 100%;
+   text-align: right;
+   list-style: none;
+
+ }
+ li {
+    display: inline-block;
+    width: 250px;
+    text-align: center;
+
+ }
+ a {
+    color: white;
+    font-size: 1.5rem;
+    text-decoration: none;
+    display: block;
+    line-height: 4rem;
+ }
+ a:hover {
+    cursor: pointer;
+    background-color: rgba(232, 105, 14, 0.869);
+ }
+ .icon-style {
+    margin-right: 8px;
+    font-size: 0.85em;
+ }
+.icon-sd {
+    font-size: 0.9em;
+    position: relative;
+    left: 25px;
+}
+.child-menu {
+    position: absolute;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 1s;
+
+}
+.main-menu > li:hover .child-menu {
+    position: absolute;
+    color: black;
+    max-height: 500px;
+    background-color: rgb(9, 67, 125);
+    
+}
+.hamburguer-menu {
+    display: none;
+}
+@media only screen and (max-width: 750px) {
+    .box-hambuerguer {
+        display: block;
+        width: 100%;
+        height: 75px;
+        background-color: red;
+        position: fixed;
+    }
+    .hamburguer-menu{
+        color: white;
+        font-size: 1.5em;
+        position: relative;
+        right:15px;
+        bottom: 15px;
+    }
+    .nav {
+        margin-top: 73px;
+        height: calc(100% - 48px);
+        width: 80%;
+        position: fixed;
+    }
+    .main-menu {
+        text-align: left;
+    }
+    .main-menu > li{
+        text-align: left;
+    }
+    .child-menu{
+        position: relative;
+    }
+}
