--- a/css/calendario.css
+++ b/css/calendario.css
@@ -6,7 +6,7 @@
 .main-box {
     width: 100%;
     height: 100vh;
-    background-color: darkgrey;
+   /*  background-color: darkgrey; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,25 +19,44 @@
     gap: 15px;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(8, 100px);
+    gap:15px;
 }
 .box-celda {
     width: 100%;
     height: 100%;
-    background-color: dodgerblue;
+    background-color: rgb(255, 162, 56);
     color: white;
-    font-size: 1.8em;
+    font-size: 1.3em;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: flex-end;
+    position: relative;
 }
 .nombre-mes {
     grid-column-start:1 ;
-    grid-column-end: 80;
+    grid-column-end: 8;
 }
 .box-1{
     grid-column-start:6 ;
     grid-column-end:6 ;
 }
 .nombre-dia {
-    background-color: aquamarine;
+    background-color: rgb(22, 94, 238);
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    font-size: 1.8em;
+}
+.box-celdas{
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0,);
+    font-size: 5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.festivos{
+    background-color: rgba(255, 162, 56, 0.886);
 }
