--- a/css/maquetacion.css
+++ b/css/maquetacion.css
@@ -1,8 +1,80 @@
-* {
+*{
     margin: 0;
     padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.main-box {
+header{
+background-color: darkcyan;
 width: 100%;
-background-color: darkgray;
+height: 100px;
+display: grid;
+grid-template:"logo menu" 100px /
+                150px 1fr; 
+}
+.logo{
+    grid-area: logo;
+    background-color: rgb(67, 210, 0);
+    width: 100%;
+    height: 100%;
+}
+.menu{
+    grid-area: menu;
+    background-color: rgba(67, 210, 0, 0.743);
+    width: 100%;
+    height: 100%;
+}
+.img-principal{
+    grid-area: img-principal;
+    width: 100%;
+    height: 100%;
+    background-color: darkcyan;
+}
+.style-box{
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    font-weight: 800;
+}
+.main-contents{
+    width: 100%;
+    height: 600px;
+    display: grid;
+    column-gap: 80px;
+    row-gap: 40px;
+    grid-template: "img-principal img-principal img-principal img-principal img-principal" 600px 
+                   "empty-left    article-1     article-2     article-3     empty-rigth"   500px
+                   "empty-left    article-4     article-5     article-6     empty-rigth"   500px/
+                    1fr           350px         350px         350px         1fr;
+}
+.article{
+width: 100%;
+height: 350px;
+background-color: rgb(64,64,64);
+}
+.article-1{
+    grid-area: article-1;
+}
+.article-2{
+    grid-area: article-2;
+}
+.article-3{
+    grid-area: article-3;
+}
+.article-4{
+    grid-area: article-4;
+}
+.article-5{
+    grid-area: article-5;
+}
+.article-6{
+    grid-area: article-6;
+}
+.style-img-article{
+    height: 350px;
+}
+.style-texto-article{
+    line-height: 1.5em;
+    text-align: justify;
 }
