--- a/css/miportafolio.css
+++ b/css/miportafolio.css
@@ -128,6 +128,14 @@ header .navbar ul li a:hover{
     header.toggle{
         left: -0;
     }
+    @media (max-width:780px){
+       html{
+        font-size: 50%;
+       }
+        }
+       
+    }
+    
 }
 
 @media (max-width:400px){
