--- a/css/miportafolio.css
+++ b/css/miportafolio.css
@@ -33,6 +33,11 @@ html::-webkit-scrollbar-thumb{
 body{
     background: #111;
     overflow-x: hidden;
+    padding-left: 35rem;
+}
+section{
+    min-width: 100vh;
+    padding: 1rem;
 }
 header{
     position: fixed;
@@ -93,6 +98,27 @@ header .navbar ul li a:hover{
     z-index: 1000;
     display: none;
 }
+.home{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    padding: 0 15rem;
+}
+.home h3{
+    font-size: 2.5rem;
+    color: white;
+}
+.home h1{
+    font-size:5rem;
+    color: white;
+}
+.home p{
+    font-size:2rem;
+    color: white;
+    padding: 1rem 0;
+}
+
 
 
 
