--- a/css/miportafolio.css
+++ b/css/miportafolio.css
@@ -15,7 +15,7 @@
 }
 *::selection{
     background:var(--green)
-    color:#333;
+    color: #fff;
 }
 html{
     font-size: 62.5%;
@@ -36,8 +36,35 @@ body{
     padding-left: 35rem;
 }
 section{
-    min-width: 100vh;
+    min-height: 100vh;
     padding: 1rem;
+}
+.btn{
+    padding: 1rem 3rem;
+    background: #333;
+    color: white;
+    cursor: pointer;
+    margin-top: 1rem;
+    font-size: 2rem;
+    border-radius: 5rem;    
+}
+.btn i{
+    padding: 0.1rem;
+    font-size: 1.8rem;
+}
+.btn:hover{
+    background:var(--green)
+}
+.heading{
+    text-align: center;
+    margin: 0 6rem;
+    font-size: 4rem;
+    padding: 1rem;
+    border-bottom: .1rem solid#fff4;
+    color: #fff;
+}
+.heading span{
+    color: var(--green);
 }
 header{
     position: fixed;
@@ -101,7 +128,6 @@ header .navbar ul li a:hover{
 .home{
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-flow: column;
     padding: 0 15rem;
 }
@@ -110,13 +136,179 @@ header .navbar ul li a:hover{
     color: white;
 }
 .home h1{
-    font-size:5rem;
+    font-size: 5rem;
     color: white;
+}
+.home h1 span{
+    color:var(--green) ;
 }
 .home p{
-    font-size:2rem;
-    color: white;
+    font-size: 2rem;
+    color: #eee;
     padding: 1rem 0;
+}
+.about .row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 1rem 0;
+}
+.about .row .info{
+    flex: 1 1 48rem;
+    padding: 2rem 1rem;
+    padding-left: 6rem;
+}
+.about .row .info h3{
+    font-size: 2rem;
+    color: var(--green);
+    padding: 1rem 0;
+    font-weight: normal;
+}
+.about .row .info h3 span{
+    color: #eee;
+    padding: 0 .5rem;
+}
+.about .row .counter{
+    flex: 1 1 48rem;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.about .row .counter .box{
+    width: 20rem;
+    background: #222;
+    text-align: center;
+    padding: 2rem;
+    margin: 2rem;
+}
+.about .row .counter .box span{
+    font-size: 4rem;
+    color: var(--green);
+}
+.about .row .counter .box h3{
+    font-size: 2rem;
+    color: #fff;
+}
+.education .box-container{
+    display: flex;
+    align-items: center ;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 1rem 0;
+    padding-left: 3rem;
+}
+.education .box-container .box{
+    width: 27rem;
+    margin: 4rem 1rem;
+    padding-left: 4rem;
+    border-left: .2rem solid #fff;
+    position: relative;
+}
+.education .box-container .box span{
+    font-size: 2rem;
+    background: #222;
+    color: #fff;
+    border-radius: 5rem;
+    padding: .5rem 2.5rem;
+
+}
+.education .box-container .box h3{
+    font-size: 2rem;
+    padding-top: 1.5rem;
+    color:#fff
+}
+.education .box-container .box p{
+    font-size: 1.4rem;
+    padding-top: 1rem 0;
+    color:#eee
+}
+.education .box-container .box i{
+    position: absolute;
+    top: -1.5rem; left: -2.5rem;
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    line-height: 5rem;
+    text-align: center;
+    font-size: 2rem;
+    color: #fff;
+    background: var(--green);
+
+}
+.projet .box-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding:2rem 0;
+}
+.projet .box-container .box{
+    height: 20rem;
+    width: 26rem;
+    border-radius: 1rem;
+    overflow: hidden;
+    cursor: pointer;
+}
+.projet .box-container .box img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+.projet .box-container .box:hover img{
+    transform: scale(1.2);
+}
+.contact .row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.contact .row .content{
+    flex: 1 1 30rem;
+    padding: 4rem;
+    padding-bottom: 0;
+}
+.contact .row form{
+    flex: 1 1 45rem;
+    padding: 2rem;
+    margin: 2rem;
+   margin-bottom: 4rem;
+}
+.contact .row form .box{
+    padding:1.5rem;
+    margin: 1rem 0;
+    background: #3333;
+    color: #fff;
+    text-transform: none;
+    font-size: 1.7rem;
+    width: 100%;
+}
+.contact .row form .box::placeholder{
+    text-transform: capitalize;
+}
+
+.contact .row form .message{
+ height: 15rem;
+ resize: none;
+}
+.contact .row .content .title{
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 3rem;
+    padding-bottom: 2rem;
+}
+.contact .row .content .info h3{
+    display: none;
+    align-items: center;
+    font-size: 1rem;
+    color: #eee;
+    padding: 1rem 0;
+    font-weight: normal;
+}
+.contact .row .content .info h3 i{
+    padding-right: 1rem;
+    color: var(--green);
 }
 
 
@@ -134,14 +326,12 @@ header .navbar ul li a:hover{
 
 
 
-
-
-
-
-
-@media (max-width:1200px){
-    html{
+@media (max-width:1200px) {
+    html {
         font-size: 55%;
+    }
+    .home {
+        padding: 1rem 4rem;
     }
 }
 @media (max-width:991px){
@@ -152,21 +342,37 @@ header .navbar ul li a:hover{
         display: block;
     }
     header.toggle{
-        left: -0;
+        left: 0%;
     }
-    @media (max-width:780px){
-       html{
-        font-size: 50%;
-       }
-        }
-       
-    }
-    
 }
+@media (max-width:760px){
+    html{
+        font-size: 50%;
+    }
+    body{
+        padding: 0;
+    }
+   
+}
+
 
 @media (max-width:400px){
     header{
         width: 100vw;
     }
-   
+   .heading{
+    margin: 0 3rem;
+   }
+   .about .row .counter .box{
+    width: 100%;
+   }
+   .education .box-container .box{
+    width: 100%;
+   }
+   .projet .box-container .box{
+    width: 100%;
+   }
+   .contact .row form{
+    margin: 3rem 0;
+   }
 }
