--- a/css/miportafolio.css
+++ b/css/miportafolio.css
@@ -298,7 +298,7 @@ header .navbar ul li a:hover{
     font-size: 3rem;
     padding-bottom: 2rem;
 }
-.contact .row .content .info h3{
+/* .contact .row .content .info h3{
     display: none;
     align-items: center;
     font-size: 1rem;
@@ -310,7 +310,7 @@ header .navbar ul li a:hover{
     padding-right: 1rem;
     color: var(--green);
 }
-
+ */
 
 
 
