--- a/css/starbucks.css
+++ b/css/starbucks.css
@@ -5,8 +5,13 @@
     font-family: Poppins, sans-serif;
 }
 header{
+    position: fixed;
+    background-color: white;
+    z-index: 30;
+    top: 0;
+    width: 100%;
     display: grid;
-    grid-template: " empty-left main-logo box-main-menu empty-rigth" 110px /
+    grid-template: " empty-left main-logo box-main-menu empty-rigth" 140px /
                       140px       1fr        2fr          50px ;
                     
 }
@@ -14,7 +19,7 @@ header{
  grid-area:main-logo;
 }
 .img-logo{
-padding: 30px 0 0 100px;
+padding: 40px;
 }
 .box-main-menu{
     grid-area: box-main-menu;
@@ -38,13 +43,22 @@ padding: 30px 0 0 100px;
     font-family: Poppins, sans-serif;
 }
 .main-circle{
-    background-color: rgb(2,104,64);
     width: 1800px;
     height: 1800px;
     border-radius: 900px;
     position: fixed;
     top: 280px;
     right: -950px;
+    z-index: 5;
+}
+.main-circle-green{
+    background-color: rgb(2,104,64);
+}
+.main-circle-light-pink{
+     background-color: rgb(230,112,147);
+}
+.main-circle-dark-pink{
+    background-color: rgb(194,73,159);
 }
 h1{
     font-size: 5em;
@@ -55,12 +69,13 @@ h1{
     color: rgb(2,104,64);
     font-family: Poppins, sans-serif;
     font-weight: 900;
+    font-size: 1.3em;
 }
 .main-content{
     margin-top: 140px;
    display: grid;
    grid-template: "empty-left product-text empty-center product-img social-media"/
-                   140px       5fr          3fr         4fr          80px;
+                   140px       5fr          300px         4fr          80px;
 }
 .produc-text{
 grid-area: product-text;
@@ -75,7 +90,7 @@ grid-area: product-text;
     color: rgb(96,96,93);
     font-family: Poppins, sans-serif;
     font-size: 1.3em;
-    line-height: 1.4em;
+    line-height: 1.5em;
     letter-spacing: 0.05em;
     font-weight: 500;
 }
@@ -93,6 +108,9 @@ grid-area: product-text;
     letter-spacing: 0.1em;
 }
 .social-media{
+position: fixed;
+right: 0;
+top: 450px;
 grid-area: social-media;
 z-index: 10;
 font-size: 2em;
@@ -105,15 +123,31 @@ gap: 40px;
 margin-top: -100px;
 }
 footer{
-    position: fixed;
+   /*  position: relative; */
     bottom: 20px;
     display: flex;
     justify-content: center;
     width: 100%;
-    gap: 40px;
+    gap: 40
+    px;
     z-index: 10;
+    color: white;
 }
 .style-img-mini{
  z-index: 20;
+ position: relative;
+ transition: all 600ms ;
+ top: 0;
 }
-
+.style-img-mini:hover{
+    cursor: pointer;
+}
+.mini-green:hover{
+    top: -30px;
+}
+.mini-Light-pink:hover{
+    top: -30px;
+}
+.mini-Dark-pink:hover{
+    top: -30px;
+}
