--- a/css/menu-subitems.css
+++ b/css/menu-subitems.css
@@ -42,7 +42,7 @@ a {
 }
   
 /*menu de segundo nivel*/
-nav li li{
+/* nav li li{
   max-height: 0;
   overflow: hidden;
   transition: max-height .3s;
@@ -59,5 +59,5 @@ transition: max-height 1.5s;
 nav ul ul ul {
   left: 100%;
   top:0;
-}
+} */
 
