--- a/css/catalogo.css
+++ b/css/catalogo.css
@@ -39,7 +39,7 @@
     justify-content: center;
     width: 100%;
     height: 15%;
-    background-color: rgb(39,200,164);
+    background-color: rgb(28, 112, 94);
 }
 .product-text {
     text-align: center;
