--- a/css/sneakers1.css
+++ b/css/sneakers1.css
@@ -209,6 +209,55 @@ header {
     line-height: 1.5em;
     font-weight: 500;
 }
+.box-precio{
+    display: flex;
+    flex-direction: row;
+}
+.precio{
+    margin-top: 25px;
+    font-weight: 700;
+    font-size: 2.1em;
+}
+.descuento{
+    display: flex;
+    align-items: flex-end;
+    font-weight: 600;
+}
+.lbl-descuento{
+    background-color: rgb(255,237,224 );
+    padding: 5px 8px;
+    border-radius: 4px;
+    margin-left: 5px;
+    margin-bottom: 8px;
+    color: rgb(255,125,26);
+}
+.box-precio-sin-desc{
+    color: rgb(140,140,140,.8);
+    font-weight: 700;
+    margin-top: 10px;
+    font-size: 1.1em;
+    text-decoration: line-through;
+}
+.box-minus-plus{
+    width: 150px;
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+    background-color: rgb(247,248,253);
+    border-radius: 10px;
+}
+.box-minus, .box-cantidad, .box-plus {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+    font-weight: 700;
+}
+.box-minus, .box-plus{
+    color: rgb(255,125,26);
+}
 /* Fonts */
 /* kanit-regular - latin */
 @font-face {
